ai-services/qdrant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qdrant
  namespace: qdrant
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: qdrant
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: qdrant
    spec:
      containers:
        - name: qdrant
          # renovate: datasource=docker depname=qdrant/qdrant versioning=loose
          image: qdrant/qdrant:latest
          ports:
            - name: http
              containerPort: 6333
            - name: grpc
              containerPort: 6334
          volumeMounts:
            - name: storage
              mountPath: /qdrant/storage
          readinessProbe:
            httpGet:
              path: /readyz
              port: 6333
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /livez
              port: 6333
            periodSeconds: 10
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: qdrant-nfs-pvc
